2007-06-23  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-applet-manager.c: (awn_applet_manager_height_changed),
	(awn_applet_manager_load_applets):
	* src/awn-applet-manager.h:
	* src/awn-task.c: (draw), (_task_choose_custom_icon):
	* src/main.c: (main), (resize), (bar_height_changed):
	Fixed positioning of progress and info labels on task.
	Added initial support for dynamic resizing (doesn't work :-).

2007-06-23  Neil J. Patel  <njpatel@gmail.com>

	* src/awn-hotspot.c: (awn_hotspot_new), (render_pixmap):
	* src/awn-task-manager.c: (on_height_changed),
	(awn_task_manager_init):
	* src/main.c: (main):
	Made the hotspot for autohide 20px smaller on both sides, so as to not stop
	hot-corners from working.

2007-06-23  Neil J. Patel  <njpatel@gmail.com>

	* avant-applets/avant-applets.in.py:
	Look in lib64 for applets as well :-).

2007-06-23  Neil J. Patel  <njpatel@gmail.com>

	* avant-applets/avant-applets.glade:
	Set avant-applets window NOT to skip the taskbar and pager.

2007-06-23  Neil J. Patel  <njpatel@gmail.com>

	* applets/trash/applet.c: (awn_applet_factory_init):
	* applets/trash/trashapplet.c: (draw):
	* awn-applet-activation/awn-plug.c: (awn_plug_new):
	* src/awn-app.c: (awn_app_new), (on_icon_changed),
	(awn_app_create_active_icon):
	* src/awn-applet-manager.c: (_create_applet),
	(awn_applet_manager_load_applets):
	* src/awn-bar.c: (awn_bar_new), (render), (_position_window),
	(resize):
	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-gconf.h:
	* src/awn-task-manager.c: (awn_task_manager_set_task_icon_by_name),
	(awn_task_manager_set_task_icon_by_xid):
	* src/awn-task.c: (awn_task_init), (_task_opening_effect),
	(icon_loader_get_icon_spec), (_task_destroy), (draw),
	(awn_task_win_enter_in), (awn_task_win_enter_out),
	(_task_wnck_icon_changed), (awn_task_set_window),
	(awn_task_set_launcher), (awn_task_refresh_icon_geometry),
	(awn_task_update_icon), (awn_task_set_width),
	(awn_task_unset_custom_icon), (_task_choose_custom_icon):